# monopoly

./: .gitignore  CMakeLists.txt  README.md
include/: Box.h  BoxType.h  Game.h  Player.h  bot.h  box.h  boxType.h  declaration.h  game.h  gametype.h  human.h  lateralBox.h  output.h  player.h  rules.h  sideBox.h  table.h
src/: bot.cpp  box.cpp  game.cpp  human.cpp  lateralBox.cpp  main.cpp  output.cpp  player.cpp  sideBox.cpp  table.cpp
